añadiendo un titulo

--- a/editar.html
+++ b/editar.html
@@ -5,6 +5,7 @@
   <title>editar</title>
 </head>
 <body>
+<h1>Este es un titulo</h1>
   <p> editar esto </p>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
